--- a/001.HTML학습/01.info_PJ/sub3.html
+++ b/001.HTML학습/01.info_PJ/sub3.html
@@ -8,17 +8,17 @@
         <!-- meta: charset 필수 인코딩설정 -->
         <meta charset="utf-8" />
         <!-- title: 탭에 표시 타이틀 -->
-        <title>네이버 요약 뉴스</title>
-        <!-- 인터널 스타일시트 요소 -->
-        <!----> <style>css코드내용</style> -->
-
+        <title>네이버 요약 뉴스 - 사회</title>
+        <!-- 익스터널 스타일시트 요소 -->
         <link rel="stylesheet" href="./css/common.css">
+        <link rel="stylesheet" href="./css/sub.css">
+
     </head>
     <body>
         <!-- 1.상단영역 -->
         <header class="top bx">
             <!-- 1-1.제목 -->
-            <h1>네이버 요약 뉴스</h1>
+            <h1>네이버 요약 뉴스 - 사회</h1>
             <!-- 1-2.GNB메뉴 -->
             <!-- GNB(Global Navigation Bar) -->
 
@@ -38,7 +38,48 @@
         </header>
         <!-- 2.메인영역 -->
         <main class="cont bx">
-            <img src="./images/main.jpg" alt="뉴스메인이미지" />
+          <!-- 2-1.언론사로고 -->
+          <div class="prlogo">
+            <a href="" target="_blank"
+            <img src="" alt="">
+            </a>
+            <!--
+                a 요소 : anchor(닻)
+                href 속성 : 이동할 페이지주소
+                (hyper text reference)
+                target 속성 : 새창일경우 "_blank"셋팅
+            -->
+
+        </div>
+        <!-- 2-2.기사제목 -->
+        <h2 class="atit">
+
+        </h2>
+        <!-- 2-3.기사사진(+사진설명) -->
+        <figure class="afig">
+            <img sre="" alt="">
+            <!-- 이미지 설명 -->
+            <figcaption>
+
+            </figcaption>
+        </figure>
+        <!--
+            figure 요소 : 이미지나 표를 넣는 박스
+            -> figcaption 하위요소는 필요시 사용(필수아님)
+        -->
+        <!-- 2-4.기사내용 -->
+        <section class="arti">
+
+        </section>
+        <!-- 2-5.기자정보 -->
+        <div class="rpt">
+
+        </div>
+        <!-- 2-6.기사원문 -->
+        <h5>
+            <a>
+                
+            </a>
         </main>
         <!-- 3.하단영역 -->
         <footer class="info bx">
