--- a/002.CSS학습/009.웹폰트2.html
+++ b/002.CSS학습/009.웹폰트2.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>웹폰트 CDN방식으로 적용하기</title>
-    <!-- 웹폰트 CDN : link방식  -->
+    <!-- 웹폰트 CDN : link방식  --> 
+    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Rubik+Gemstones&family=Rubik+Spray+Paint&family=Rubik+Vinyl&display=swap"
+    rel="stylesheet"/ -- >
+
     <style>
         /* 
             [ CDN 방식으로 웹폰트 불러오기 ]
@@ -41,6 +44,7 @@
              */
 
         /* import방식 CDN 웹폰트 */
+        @import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Rubik+Gemstones&family=Rubik+Spray+Paint&family=Rubik+Vinyl&display=swap');
 
         /* CDN 웹폰트 적용하기 */
         .cdn1 {
